gcc/testsuite/g++.dg/concepts/requires1.C
concept A<typename T> { }

template<typename T>
struct X 
{
  requires A<T>; // { dg-error "requirements clause" }
};
